@@ -3,12 +3,13 @@ TODO:
 	show MIDI length in seconds.
 	TextTrackWriter
 	FingeringNavigator
-		run with constraints
 		save longest node as candidate
 
 
 
 2017.9.18	K.L.	<k.l.lambda@gmail.com>
+
+	+	Pianist/FingeringNavigator: constraits navigation implemented.
 
 	+	NotationUtils: added fingering parsing in parseMidiTrack.
 
